--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "google-maps-react": "^2.0.2",
+    "leaflet": "^1.4.0",
     "re-base": "2.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-leaflet": "^2.2.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
     "styled-components": "^4.2.0",
