--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-leaflet": "^2.2.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
+    "react-validation": "^3.0.7",
     "styled-components": "^4.2.0",
+    "tachyons-components": "^1.0.1",
     "typeface-roboto": "^0.0.54",
     "yarn.lock": "^0.0.1-security"
   },
